app/assets/sass/components/_multi-file-upload.scss
.app-multi-file-upload {
	margin-bottom: 40px;
}

.app-multi-file-upload--enhanced .app-multi-file-upload__button {
	display: none;
}

.app-multi-file-upload__dropzone {
  outline: 2px dashed $govuk-border-colour;
	display: flex;
  align-items: center;
	padding: govuk-spacing(6) govuk-spacing(4);
	// transition: outline-offset .1s ease-in-out, background-color .1s linear;
}

.app-multi-file-upload__dropzone label {
	margin-bottom: 0;
	display: inline-block;
	width: auto;
}

.app-multi-file-upload__dropzone p {
  margin-bottom: 0;
  margin-left: 10px;
}

.app-multi-file-upload__dropzone [type=file] {
	position: absolute;
	left: -9999em;
}

.app-multi-file-upload--dragover {
	background: govuk-colour('light-grey');
  outline: 2px solid govuk-colour('black');
}

.app-multi-file-upload--focused {
	background-color: $govuk-focus-colour;
  color: $govuk-focus-text-colour;
  box-shadow: 0 -2px $govuk-focus-colour, 0 4px $govuk-focus-text-colour;
  outline: none;
}

.app-multi-file-upload__error {
	color: govuk-colour('red');
	font-weight: bold;
}

.app-multi-file-upload__success {
	display: block;
}

.app-multi-file-upload__delete {
  @include govuk-font($size: 19);
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  color: $govuk-link-colour;
  text-decoration: underline;

  &:hover {
    color: $govuk-link-hover-colour;
  }

  &:focus {
    background-color: $govuk-focus-colour;
    color: $govuk-focus-text-colour;
    box-shadow: 0 -2px $govuk-focus-colour, 0 4px $govuk-focus-text-colour;
    outline: none;
    text-decoration: none;
  }
}

.app-multi-file-upload__message {
	vertical-align: middle;
}

